--- a/bootstrap/css/design.css
+++ b/bootstrap/css/design.css
@@ -1,3 +1,6 @@
+body{
+	background-image: url("moviereview.png");
+}
 .logoPic{
 	height: 170px;
 	margin-top: 20px;
@@ -13,12 +16,14 @@
 	border: solid #bab6b6 1px;
 	height: 300px;
 	font-family: Glacial Indifference;
+	background-color: rgba(246,246,246,0.7);
 }
 
 .register{
 	border: solid #bab6b6 1px;
 	height: 400px;
 	font-family: Glacial Indifference;
+	background-color: rgba(246,246,246,0.7);
 }
 
 .chckinMovieRev{
@@ -58,6 +63,8 @@
 .navs{
 	font-family: Glacial Indifference;
 	font-size: 20px;
+	background-color: white;
+	/*background-color: rgba(241,181,24,0.5);*/
 }
 
 /*horizontal scroll*/
@@ -115,6 +122,7 @@
 	background-color: white;
 	border: solid #bab6b6 1px;
 	padding:0px;
+	/*background-color: rgba(246,246,246,0.7);*/
 }
 
 .posterHeaderPic{
@@ -125,6 +133,8 @@
 	border: solid #bab6b6 1px;
 	font-family: Glacial Indifference;
 	height: 700px;
+	background-color: rgba(246,246,246,0.7);
+}
 }
 
 .cancelAction:hover{
